--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
-[submodule "minecraft-data"]
-	path = minecraft-data
-	url = https://github.com/Seanspt/minecraft-data
-	branch = minecraft-data/feat/1.21.5-support
+[minecraft-data]
+  path = minecraft-data
+  url  = https://github.com/Seanspt/minecraft-data.git
+  branch = minecraft-data/feat/1.21.5-support
+
