--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[minecraft-data]
+[submodule "minecraft-data"]
   path = minecraft-data
   url  = https://github.com/Seanspt/minecraft-data.git
   branch = minecraft-data/feat/1.21.5-support
