--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:types": "tsc typings/test-typings && node typings/test-typings.js",
     "test": "npm run generate:types && npm run generate:data && npm run lint && npm run test:types && mocha",
     "lint": "standard",
-    "prepare": "npm run generate:data && npm run generate:types",
+    "prepare": "git submodule update --init --recursive && npm run generate:data && npm run generate:types",
     "fix": "standard --fix"
   },
   "standard": {
