--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Provide easy access to minecraft data in node.js",
   "main": "index.js",
   "tonicExampleFilename": "example.js",
-  "files": {
+  "files": [
     "lib",
     "minecraft-data"
-  },
+  ],
   "scripts": {
     "generate:types": "node typings/generate-typings.js",
     "generate:data": "node ./bin/generate_data.js",
